Color/spacing fixes for fieldset/legend in exercises

--- a/bases/rsptx/interactives/runestone/common/css/runestone-custom-sphinx-bootstrap.css
+++ b/bases/rsptx/interactives/runestone/common/css/runestone-custom-sphinx-bootstrap.css
@@ -1210,3 +1210,10 @@ details.ptx-footnote {
     background-color: var(--content-background, #fff);
     color: var(--bodyFont, #000);
 }
+
+
+legend {
+    /* allow darkmode to override legend color */
+    color: var(--grayToWhite, #333);
+    border-bottom-color: var(--grayToWhite, #333);
+}
